# Mnemosyne-backend

./: .gitmodules  CMakeLists.txt  README.md  config.no-user.json  main.cc  utils.cmake  vcpkg.json  verifyEmail.html
controllers/: Auth.cc  Auth.h  Collection.cc  Collection.h  Data.cc  Data.h  User.cc  User.h
docs/: Mnemosyne.uml
filters/: AllowOptions.cc  AllowOptions.h  AuthDeactivateEmail.cc  AuthDeactivateEmail.h  AuthDeactivatePhone.cc  AuthDeactivatePhone.h  AuthLoginEmail.cc  AuthLoginEmail.h  AuthLoginPhone.cc  AuthLoginPhone.h  AuthMigrateEmail.cc  AuthMigrateEmail.h  AuthMigratePhone.cc  AuthMigratePhone.h  AuthResetEmail.cc  AuthResetEmail.h  AuthResetPhone.cc  AuthResetPhone.h  AuthVerifyEmail.cc  AuthVerifyEmail.h  AuthVerifyPhone.cc  AuthVerifyPhone.h  CheckAccessToken.cc  CheckAccessToken.h  CheckCollectionId.cc  CheckCollectionId.h  CheckDataId.cc  CheckDataId.h  CheckDataType.cc  CheckDataType.h  CheckRefreshToken.cc  CheckRefreshToken.h  CheckUserId.cc  CheckUserId.h  CollectionCreate.cc  CollectionCreate.h  CollectionFuzzy.cc  CollectionFuzzy.h  CollectionModify.cc  CollectionModify.h  (+22 more)
helpers/: BasicJson.cc  BasicJson.h  DataJson.cc  DataJson.h  EmailHelper.cc  EmailHelper.h  I18nHelper.h  MessageJson.cc  MessageJson.h  RedisHelper.cc  RedisHelper.h  RequestJson.cc  RequestJson.h  ResponseJson.cc  ResponseJson.h
models/: Audios.cc  Audios.h  Collection.cc  Collection.h  Collections.cc  Collections.h  Data.cc  Data.h  Documents.cc  Documents.h  Ebooks.cc  Ebooks.h  Images.cc  Images.h  Models.cc  Models.h  Statistics.cc  Statistics.h  User.cc  User.h  Users.cc  Users.h  Videos.cc  Videos.h
plugins/: Configurator.cc  Configurator.h  DataManager.cc  DataManager.h  UserManager.cc  UserManager.h
structures/: DataRedis.cc  DataRedis.h  ExceptionHandlers.cc  ExceptionHandlers.h  Exceptions.cc  Exceptions.h  HandlerFactory.h  HandlerManagerBase.h  MessageHandlerBase.h  RedisToken.cc  RedisToken.h  UserRedis.cc  UserRedis.h
test/: CMakeLists.txt  test_main.cc
types/: DataType.h  JsonValue.h  MessageType.h  NetEndian.cc  NetEndian.h  Permission.h  ResultCode.h  TcpState.h  Visibility.h
utils/: crypto.cc  crypto.h  data.cc  data.h  datetime.cc  datetime.h  io.cc  io.h  postgresql.cc  postgresql.h  websocket.cc  websocket.h
